# openclaw

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md  deploy.sh  fochs.service  nginx-fochs.conf
src/openclaw/: __main__.py  app.py  config.py
src/openclaw/cli/: __init__.py  _helpers.py  doctor.py  output.py  preflight.py  setup.py  update.py
src/openclaw/core/: agent.py  agent_loop.py  events.py
src/openclaw/db/: engine.py
src/openclaw/integrations/: __init__.py  agentmail.py  brave.py  clawhub.py  closedclaw.py  composio.py  email.py  github.py  honcho.py  rss.py  virustotal.py
src/openclaw/llm/: base.py  claude.py  gemini.py  grok.py  ollama.py  router.py
src/openclaw/memory/: long_term.py  models.py  short_term.py  vector_store.py
src/openclaw/plugins/: __init__.py  loader.py
src/openclaw/research/: citations.py  engine.py  summarizer.py
src/openclaw/scheduler/: manager.py
src/openclaw/scheduler/watchers/: base.py  email.py  github.py  rss.py  topic.py
src/openclaw/security/: budget.py  logging.py  shell_guard.py
src/openclaw/sub_agents/: config.py  runner.py
src/openclaw/telegram/: bot.py
src/openclaw/tools/: agentmail_tools.py  base.py  clawhub_tools.py  composio_tools.py  credential_tools.py  delegate_tool.py  email_tools.py  file_tool.py  github_tools.py  google_search.py  honcho_tools.py  memory_tools.py  registry.py  rss_tools.py  scheduler_tools.py  self_update_tool.py  shell_tool.py  web_scrape.py  web_search.py
src/openclaw/web/: __init__.py  auth.py  middleware.py  server.py
src/openclaw/web/routes/: api.py  chat.py  dashboard.py
src/openclaw/web/static/: chat.js  style.css
src/openclaw/web/templates/: base.html  chat.html  dashboard.html  login.html  settings.html
src/openclaw/web/templates/partials/: status.html
tests/integration/: test_conversation_persistence.py  test_web_health.py
tests/unit/: test_agentmail_tools.py  test_brave.py  test_citations.py  test_clawhub_tools.py  test_cli_doctor.py  test_cli_helpers.py  test_cli_output.py  test_cli_preflight.py  test_cli_setup.py  test_cli_update.py  test_composio_tools.py  test_config.py  test_credential_tools.py  test_email_tools.py  test_file_tool.py  test_github_tools.py  test_honcho_tools.py  test_long_term_memory.py  test_memory_tools.py  test_plugin_loader.py  test_research_engine.py  test_router.py  test_rss.py  test_scheduler_tools.py  test_shell_tool.py  test_short_term.py  test_sub_agents.py  test_vector_store.py  test_watchers.py  test_web.py  test_web_scrape.py  test_web_search_tool.py
