[project]
name = "openclaw"
version = "0.1.0"
description = "Fochs - An autonomous AI agent that researches, informs, and evolves"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # LLM Providers
    "anthropic>=0.40.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    # Telegram
    "python-telegram-bot[ext]>=22.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "websockets>=14.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    # Vector Store
    "chromadb>=0.5.0",
    # Configuration
    "pydantic-settings>=2.6.0",
    # GitHub
    "PyGithub>=2.5.0",
    # E-Mail
    "aiosmtplib>=3.0.0",
    "aioimaplib>=2.0.0",
    # RSS
    "feedparser>=6.0.0",
    # Logging
    "structlog>=24.0.0",
    "itsdangerous>=2.2.0",
    # Credential Vault (ClosedClaw)
    "cryptography>=43.0.0",
    "python-multipart>=0.0.22",
]

[project.scripts]
fochs = "openclaw.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openclaw"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["openclaw"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["telegram.*", "chromadb.*", "github.*", "aioimaplib.*", "aiosmtplib.*", "feedparser.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
